Still renaming package to pingr

--- a/README.Rmd
+++ b/README.Rmd
@@ -10,8 +10,8 @@ knitr::opts_chunk$set(
 
 # pingr: check if a server is alive
 
-[![Linux Build Status](https://travis-ci.org/gaborcsardi/ping.png?branch=master)](https://travis-ci.org/gaborcsardi/ping)
-[![Windows Build status](https://ci.appveyor.com/api/projects/status/4vvet9e6irj06g1w)](https://ci.appveyor.com/project/gaborcsardi/ping)
+[![Linux Build Status](https://travis-ci.org/gaborcsardi/pingr.png?branch=master)](https://travis-ci.org/gaborcsardi/pingr)
+[![Windows Build status](https://ci.appveyor.com/api/projects/status/8utjqf4dsiy5nywp)](https://ci.appveyor.com/project/gaborcsardi/pingr)
 
 The pingr package is a simple utility that can be used to check
 if a remote machine is running, by sending network packets to it.
