--- a/README.Rmd
+++ b/README.Rmd
@@ -10,8 +10,10 @@ knitr::opts_chunk$set(
 
 # pingr: check if a server is alive
 
-[![Linux Build Status](https://travis-ci.org/gaborcsardi/pingr.png?branch=master)](https://travis-ci.org/gaborcsardi/pingr)
-[![Windows Build status](https://ci.appveyor.com/api/projects/status/8utjqf4dsiy5nywp)](https://ci.appveyor.com/project/gaborcsardi/pingr)
+[![Linux Build Status](https://travis-ci.org/gaborcsardi/pingr.svg?branch=master)](https://travis-ci.org/gaborcsardi/pingr)
+[![Windows Build status](https://ci.appveyor.com/api/projects/status/github/gaborcsardi/pingr?svg=true)](https://ci.appveyor.com/project/gaborcsardi/pingr)
+[![CRAN RStudio mirror downloads](http://cranlogs.r-pkg.org/badges/pingr)](http://cran.r-project.org/web/packages/pingr/index.html)
+
 
 The pingr package is a simple utility that can be used to check
 if a remote machine is running, by sending network packets to it.
